# esmf-performance-tests

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  TEST  input  pyproject.toml  setup.py  templates  tests
.github/workflows/: performance-tests.yml
env/derecho/: default  gcc-12.2.0-cray-mpich-8.1.25.lua  intel-2023.2.1-cray-mpich-8.1.27.lua
esmftk/: __main__.py  input.py  testcase.py  testresult.py  testsuite.py
examples/: basic  basic.yml  reconcile_mpi16384np.yml  reconcile_mpi32768np.yml  reconcile_mpi4np.yml  reconcile_mpi65280np.yml
input/: esmxRunBasic.yml  only_half.config  partial_overlap_2.config  partial_overlap_5.cfg  reconcile_2575split_2cmp100fld.cfg  reconcile_2575split_2cmp200fld.cfg  reconcile_partialoverlap_2cmp100fld.cfg  reconcile_partialoverlap_2cmp200fld.cfg  reconcile_partialoverlap_6cmp100fld.cfg  reconcile_partialoverlap_6cmp200fld.cfg  reconcile_totaloverlap_2cmp100fld.cfg  reconcile_totaloverlap_2cmp200fld.cfg  reconcile_totaloverlap_6cmp100fld.cfg  reconcile_totaloverlap_6cmp200fld.cfg
src/: CMakeLists.txt
src/esmf_reconcile/: app.F90  comp.F90
src/esmftk/: __init__.py  __main__.py  esmfinstall.py  input.py  packageout.py  testcase.py  testresult.py  testsuite.py
src/esmftk/input/: esmxRunBasic.yml  nuopcBasic.cfg  reconcile_2575split_2cmp100fld.cfg  reconcile_2575split_2cmp200fld.cfg  reconcile_totaloverlap_2cmp100fld.cfg  reconcile_totaloverlap_2cmp200fld.cfg  reconcile_totaloverlap_6cmp100fld.cfg  reconcile_totaloverlap_6cmp200fld.cfg
src/esmftk/templates/: reconcile.cfg
src/esmftk/tests/: CMakeLists.txt
src/esmftk/tests/esmf_initialize/: CMakeLists.txt
src/esmftk/tests/esmf_reconcile/: CMakeLists.txt  app.F90
src/esmftk/tests/esmx_basic/: esmxBuild.yaml
src/esmftk/tests/esmx_basic/esmx_comp1/: CMakeLists.txt  esmx_comp1.F90
src/esmftk/tests/esmx_basic/esmx_comp2/: esmx_comp2.F90
src/esmftk/tests/nuopc_basic/: basic_driver.F90  nuopc_comp1.F90  nuopc_comp2.F90
src/esmftk/wrapper/: CMakeLists.txt
src/esmx_basic/: CMakeLists.txt  esmxBuild.yaml
src/esmx_basic/COMP1/: CMakeLists.txt  comp1.F90
src/esmx_basic/COMP2/: CMakeLists.txt  comp2.F90
src/esmx_basic/ESMX_COMP1/: CMakeLists.txt
src/esmx_basic/ESMX_COMP2/: CMakeLists.txt
src/esmx_basic/esmx_comp1/cmake/: FindESMF.cmake
src/hello_world/: CMakeLists.txt
src/nuopc_basic/: CMakeLists.txt  app.F90
templates/: esmx.yml  nuopc.cfg
tests/: CMakeLists.txt
tests/esmf_initialize/: CMakeLists.txt  app.F90
tests/esmf_reconcile/: CMakeLists.txt  app.F90  total_overlap.config
tests/hello_world/: CMakeLists.txt  app.F90
tools/: bashtools.bash  esmf_performance_test.py  pytools.py
