include(ExternalProject)

ExternalProject_Add(esmx_comp1
  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/esmx_comp1
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/esmx_comp1
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
             -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
  BUILD_ALWAYS TRUE
  EXCLUDE_FROM_ALL FALSE
)

ExternalProject_Add(esmx_comp2
  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/esmx_comp2
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/esmx_comp2
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
             -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
  BUILD_ALWAYS TRUE
  EXCLUDE_FROM_ALL FALSE
)

if(ESMF_VERSION VERSION_LESS "8.5.0")
  message(WARNING "ESMX requires ESMF version 8.5.0 or greater")
else()
  ExternalProject_Add(esmx
    BINARY_DIR ${CMAKE_BINARY_DIR}/esmx
    SOURCE_DIR ${ESMF_ESMXDIR}
    CMAKE_ARGS -DESMX_BUILD_FILE=${CMAKE_CURRENT_SOURCE_DIR}/esmxBuild.yaml
               -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
    BUILD_ALWAYS TRUE
    DEPENDS esmx_comp1 esmx_comp2
    EXCLUDE_FROM_ALL FALSE
  )

  add_executable(esmx_basic IMPORTED GLOBAL)
  set_target_properties(esmx_basic PROPERTIES
    IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/bin/esmx_basic"
  )
endif (ESMF_VERSION VERSION_LESS "8.5.0")
